--- a/index.html
+++ b/index.html
@@ -439,19 +439,19 @@
         <div class="container" style="margin-top: -50px;">
             <div class="col-container">
 
-                <div class="col col-left" style="background-color: white;background-position: center; background-repeat: no-repeat; background-size: cover;padding-top: 0px;">
+                <div class="col col-left" style="background-color:black; background-position: center; background-repeat: no-repeat; background-size: cover;padding-top: 0px;">
 
-                   <img src="assets/images/logo.jpg" alt="profile_photo" class="profile-img" style="
-    margin-bottom: 0px;height: 43%;
+                   <img src="assets/images/logo.png" alt="profile_photo" class="profile-img" style="
+    margin-bottom: 0px;height: 40%;
 ">
                     <h3 class="contact-name text-white text-center" style="font-size: 15px;">
-                      <span style="color:#028F3E">MULTI CUSINE FAMILY RESTAURANT </span> <br> <br>
-North Rly. Station Road <br>
-Eranakulam North <br>
-Kochi-682018
+
+Park jn., Kayamkulam <br>
+AHM group <br>
+
 
                     </h3>
-                    <hr style="color:#028F3E;border-top: 3px solid #028F3E;margin-left: 35px;margin-bottom: 0px;margin-right: 35px;margin-top:5px;" width="80%" align="center">
+
                   <!--  <h5 class="text-white text-center">
                       Ground,
                       PAYYAMBALAM ROAD <br>
@@ -469,7 +469,7 @@ Kochi-682018
                                     </a>
                                 </div>
                                 <div class="contact-details col-md-2 col-xs-3 col-md-push-3 col-xs-push-3">
-                                    <a href="https://www.facebook.com/mohammed.rasif.1" id="email">
+                                    <a href="#" id="email">
                                         <i class="fa fa-facebook"></i>
                                         <span class="">facebook</span>
                                     </a>
@@ -493,7 +493,7 @@ Kochi-682018
                         <div class="row">
                             <div class="contact-social col-md-12 col-xs-pull">
                                 <div class="contact-details col-md-2 col-xs-3 col-md-push-3 col-xs-push-3" >
-                                    <a href="tel:+919846786776" id="call_me">
+                                    <a href="tel:+919744680007" id="call_me">
                                         <i class="fa fa-phone"></i>
                                         <span style="color:white;" class="">call us</span>
                                     </a>
@@ -505,7 +505,7 @@ Kochi-682018
                                     </a>
                                 </div>
                                 <div class="contact-details col-md-2 col-xs-3 col-md-push-3 col-xs-push-3">
-                                    <a href="https://wa.me/+919846786776" id="youtube">
+                                    <a href="https://wa.me/+917511144078" id="youtube">
                                         <i class="fa fa-whatsapp"></i>
 
                                         <span style="color:white;">WhatsApp</span>
@@ -586,18 +586,18 @@ Kochi-682018
     <div class="popup-content">
         <p class="save-me-title">About Us</p>
         <div align="center">
-        <img src="assets/images/about.jpeg" height="50%" width="50%"/>
+        <img src="assets/images/1.jpeg" height="50%" width="50%"/>
         </div>
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-3">
             </div>
             <div class="col-md-6">
-                <div class="qr-code-steps"><!--
+                <div class="qr-code-steps">
                     <div class="qr-code-step-box">
                       <h5 align="center"> <br> </h5> <br>
 
-  <span style="font-size: 15px;" class="text-bold">
+  <span style="font-size: 15px;" class="text-bold">AHM is the trusted company in Kayamkulam where you can get the latest mobile phones at affordable prices. All types of mobile phone accessories are available here. Mobile phone service is provided under the supervision of experienced staff.
 
 </span>
                     </div>
@@ -638,29 +638,14 @@ li::before {
                               <ul>
 
 
-                           <li>Bridal Make up. </li>
-                            <li>Hair cut & Styling</li>
-                            <li>Hair Care</li>
-                            <li>Hair oil massage</li>
-                            <li>Colour studio</li>
-
-                            <li>Hair texture changing</li>
-                            <li>Straightning,</li>
-                            <li>Smoothening</li>
-                            <li> Permanant blow dry.</li>
-                            <li> Pro keratin treatment</li>
-
-                            <li>Facials</li>
-                            <li>Waying</li>
-                            <li>Pedicure</li>
-                            <li>Threading</li>
-                            <li>Tattoo Works (only on appointment)</li>
-                          </ul>  </span> <br> <br> -->
+                           <li>Mobile Phones and accessories. </li>
+                            <li>Servicing and repairing.</li>
+                                                    </ul>  </span> <br> <br>
 <p class="save-me-title" style="font-size:15px; ">Payment details</p>
-<p align="center" style="font-size:15px; "><br>M.K. Mohammed Rasif <br>
+<p align="center" style="font-size:15px; "><br>Abees AHM<br> <!--
 A/c No.858410110001488 <br>
 Bank of India <br>
-IFSC. BKID 0008584 <br> <br>G-Pay: +919846786776
+IFSC. BKID 0008584 <br> <br> --> G-Pay: +919744680007
 
 </p>
                         </div>
@@ -686,7 +671,7 @@ IFSC. BKID 0008584 <br> <br>G-Pay: +919846786776
     <p class="popup-title"><i class="mdi mdi-contact-phone"></i>&nbsp;&nbsp;Feedback</p>
     <div class="popup-content">
       <p align="center">Click here to give your feedback</p>
-        <p class="save-me-title"><a href="https://wa.me/+919846786776"><i class="fa fa-whatsapp" style="font-size:30px; "></i></a></p>
+        <p class="save-me-title"><a href="https://wa.me/+917511144078"><i class="fa fa-whatsapp" style="font-size:30px; "></i></a></p>
         <p align="center">We value your feedback</p>
     </div>
 
@@ -708,7 +693,7 @@ IFSC. BKID 0008584 <br> <br>G-Pay: +919846786776
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/1.jpg" alt="Cinque Terre" width="600" height="400">
+                            <img src="assets/images/1.jpeg" alt="Cinque Terre" width="600" height="400">
 
 
                         </div>
@@ -718,7 +703,7 @@ IFSC. BKID 0008584 <br> <br>G-Pay: +919846786776
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/2.jpg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/2.jpeg" alt="Forest" width="600" height="400">
 
 
                         </div>
@@ -726,7 +711,7 @@ IFSC. BKID 0008584 <br> <br>G-Pay: +919846786776
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/3.jpg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/3.jpeg" alt="Forest" width="600" height="400">
 
 
                         </div>
@@ -734,7 +719,7 @@ IFSC. BKID 0008584 <br> <br>G-Pay: +919846786776
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/4.jpg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/4.jpeg" alt="Forest" width="600" height="400">
 
 
                         </div>
@@ -742,7 +727,7 @@ IFSC. BKID 0008584 <br> <br>G-Pay: +919846786776
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/5.jpg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/5.jpeg" alt="Forest" width="600" height="400">
 
 
                         </div>
@@ -766,7 +751,7 @@ IFSC. BKID 0008584 <br> <br>G-Pay: +919846786776
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/8.jpg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/8.jpeg" alt="Forest" width="600" height="400">
 
 
                         </div>
@@ -774,7 +759,7 @@ IFSC. BKID 0008584 <br> <br>G-Pay: +919846786776
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/9.jpg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/9.jpeg" alt="Forest" width="600" height="400">
 
 
                         </div>
@@ -782,7 +767,7 @@ IFSC. BKID 0008584 <br> <br>G-Pay: +919846786776
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/10.jpg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/10.jpeg" alt="Forest" width="600" height="400">
 
 
                         </div>
