--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
                 <div class="col col-left" style="background-color:black; background-position: center; background-repeat: no-repeat; background-size: cover;padding-top: 0px;">
 
-                   <img src="assets/images/logo.png" alt="profile_photo" class="profile-img" style="
+                   <img src="assets/images/logo.jpg" alt="profile_photo" class="profile-img" style="
     margin-bottom: 0px;height: 40%;
 ">
                     <h3 class="contact-name text-white text-center" style="font-size: 15px;">
