--- a/index.html
+++ b/index.html
@@ -462,16 +462,16 @@ Park jn., Kayamkulam <br>
                     <div class="contact-details-box" style="padding-top: 10px;">
                         <div class="row">
                             <div class="contact-social col-md-12 col-xs-pull">
+                              <div class="contact-details col-md-2 col-xs-3 col-md-push-3 col-xs-push-3">
+                                  <a href="https://www.facebook.com/AHM-Connect-107471257746333/" id="email">
+                                      <i class="fa fa-facebook"></i>
+                                      <span class="">facebook</span>
+                                  </a>
+                              </div>
                                 <div class="contact-details col-md-2 col-xs-3 col-md-push-3 col-xs-push-3">
                                     <a href="#" id="call_me">
                                         <i class="fa fa-instagram"></i>
                                         <span class="">Instagram</span>
-                                    </a>
-                                </div>
-                                <div class="contact-details col-md-2 col-xs-3 col-md-push-3 col-xs-push-3">
-                                    <a href="#" id="email">
-                                        <i class="fa fa-facebook"></i>
-                                        <span class="">facebook</span>
                                     </a>
                                 </div>
                                 <div class="contact-details col-md-2 col-xs-3 col-md-push-3 col-xs-push-3">
@@ -703,7 +703,7 @@ IFSC. BKID 0008584 <br> <br> --> G-Pay: +919744680007
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/2.jpeg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/2.jpg" alt="Forest" width="600" height="400">
 
 
                         </div>
@@ -711,7 +711,7 @@ IFSC. BKID 0008584 <br> <br> --> G-Pay: +919744680007
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/3.jpeg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/3.jpg" alt="Forest" width="600" height="400">
 
 
                         </div>
@@ -719,7 +719,7 @@ IFSC. BKID 0008584 <br> <br> --> G-Pay: +919744680007
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/4.jpeg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/4.jpg" alt="Forest" width="600" height="400">
 
 
                         </div>
@@ -727,7 +727,7 @@ IFSC. BKID 0008584 <br> <br> --> G-Pay: +919744680007
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/5.jpeg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/5.jpg" alt="Forest" width="600" height="400">
 
 
                         </div>
@@ -735,7 +735,7 @@ IFSC. BKID 0008584 <br> <br> --> G-Pay: +919744680007
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/6.jpeg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/6.jpg" alt="Forest" width="600" height="400">
 
 
                         </div>
@@ -743,31 +743,7 @@ IFSC. BKID 0008584 <br> <br> --> G-Pay: +919744680007
                     <div class="responsive">
                         <div class="gallery">
 
-                            <img src="assets/images/7.jpeg" alt="Forest" width="600" height="400">
-
-
-                        </div>
-                    </div>
-                    <div class="responsive">
-                        <div class="gallery">
-
-                            <img src="assets/images/8.jpeg" alt="Forest" width="600" height="400">
-
-
-                        </div>
-                    </div>
-                    <div class="responsive">
-                        <div class="gallery">
-
-                            <img src="assets/images/9.jpeg" alt="Forest" width="600" height="400">
-
-
-                        </div>
-                    </div>
-                    <div class="responsive">
-                        <div class="gallery">
-
-                            <img src="assets/images/10.jpeg" alt="Forest" width="600" height="400">
+                            <img src="assets/images/7.jpg" alt="Forest" width="600" height="400">
 
 
                         </div>
