--- a/index.html
+++ b/index.html
@@ -654,6 +654,7 @@ IFSC. BKID 0008584 <br> <br> --> G-Pay: +919744680007
 
                     </div>
                     <div class="col-md-2"></div>
+                    <p align="center" style="color:grey;">created by Ranys</p>
                 </div>
             </div>
 
